[package]
name = "open2fa_relay_server"
version = "0.1.0"
edition = "2021"

[dependencies]
socketioxide = "0.15.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
axum = "0.7.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0"
# jsonwebtoken = "9"
# dotenv = "0.15.0"
